# PyCompiledNN

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp  setup.py
.github/workflows/: pypi.yaml
